# VLM-Visual-Perspective-Taking

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_just_orient_anything.py  run_pipe.py  run_pipe_datasets.py  run_pipe_single.py
notebooks/: qwen-vlm.ipynb  test_orient.ipynb
out-dataset/: results.json  stats.txt
src/: qwen_extended.py  qwen_wrapper.py  vlm_extended.py
src/render_module/: renderer_module.py
src/utils/: constants.py  logger.py  prompts.py  utils.py
src/vision_external/: external_vision_model.py
src/vision_module/: depthpro_model.py  external_vision_model.py  grounding_dino_model.py  orient_anything_model.py  sam_model.py  test.py
src/vision_module/orient_anything/: inference.py  requirements.txt  utils.py  vision_tower.py
