[project]
name = "visual-perspective-taking-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "jupyter>=1.1.1",
    "ninja>=1.11.1.4",
    "qwen-vl-utils[decord]==0.0.8",
    "ruff>=0.11.9",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }
